--- a/v2/download-data-results.html
+++ b/v2/download-data-results.html
@@ -77,7 +77,7 @@
             <a class="govuk-breadcrumbs__link" href="/v2/index.html">Funded projects</a>
           </li>
           <li class="govuk-breadcrumbs__list-item">
-            <a class="govuk-breadcrumbs__link" href="/v2/index.html">Find project data</a>
+            <a class="govuk-breadcrumbs__link" href="/v2/index.html">Find project information</a>
           </li>
           <li class="govuk-breadcrumbs__list-item">
             <a class="govuk-breadcrumbs__link" href="#">Download data</a>
@@ -301,7 +301,7 @@
             </div>
           </div>
           <div class="govuk-grid-column-two-thirds">
-            <dl class="govuk-summary-list govuk-summary-list--no-border">
+            <dl class="govuk-summary-list">
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                   Timeframe:
