--- a/v2/download-data.html
+++ b/v2/download-data.html
@@ -75,7 +75,7 @@
           <a class="govuk-breadcrumbs__link" href="/v2/index.html">Funded projects</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v2/index.html">Find project data</a>
+          <a class="govuk-breadcrumbs__link" href="/v2/index.html">Find project information</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
           <a class="govuk-breadcrumbs__link" href="#">Download data</a>
