--- a/v2/find-project-city-council-summary.html
+++ b/v2/find-project-city-council-summary.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>GOV.UK - Funding Service - Find project data</title>
+	<title>GOV.UK - Funding Service - Fenn's shopping centre footfall project outcomes 2021 - Project summary</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 	<meta name="theme-color" content="#0b0c0c">
 
@@ -43,8 +43,8 @@
 							class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
 						<!--<![endif]-->
 						<!--[if IE 8]>
-						<img src="/assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
-						<![endif]-->
+          <img src="/assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
+          <![endif]-->
 						<span class="govuk-header__logotype-text">GOV.UK</span>
 					</span>
 				</a>
@@ -52,66 +52,90 @@
 		</div>
 	</header>
 
-	<div class="govuk-main-wrapper pfs-section-bg-alt govuk-!-padding-top-0 govuk-!-padding-bottom-0">
-		<div class="govuk-width-container">
-			<div
-				class="govuk-breadcrumbs govuk-!-margin-top-0 govuk-!-margin-bottom-0 govuk-!-padding-top-3 govuk-!-padding-bottom-2">
-				<ol class="govuk-breadcrumbs__list">
-					<li class="govuk-breadcrumbs__list-item">
-						<a class="govuk-breadcrumbs__link" href="/v2/index.html">Department for Levelling Up, Housing &
-							Communities</a>
-					</li>
-					<li class="govuk-breadcrumbs__list-item">
-						<a class="govuk-breadcrumbs__link" href="/v2/index.html">Funded projects</a>
-					</li>
-					<li class="govuk-breadcrumbs__list-item">
-						<a class="govuk-breadcrumbs__link" href="/v2/index.html">Find project information</a>
-					</li>
-					<li class="govuk-breadcrumbs__list-item">
-						<a class="govuk-breadcrumbs__link" href="#">Find a funded organisation</a>
-					</li>
-				</ol>
-			</div>
+	<div class="govuk-width-container">
+		<div
+			class="govuk-breadcrumbs govuk-!-margin-top-0 govuk-!-margin-bottom-0 govuk-!-padding-top-3 govuk-!-padding-bottom-2">
+			<ol class="govuk-breadcrumbs__list">
+				<li class="govuk-breadcrumbs__list-item">
+					<a class="govuk-breadcrumbs__link" href="/v2/index.html">Department for Levelling Up, Housing &
+						Communities</a>
+				</li>
+				<li class="govuk-breadcrumbs__list-item">
+					<a class="govuk-breadcrumbs__link" href="/v2/index.html">Funded projects</a>
+				</li>
+				<li class="govuk-breadcrumbs__list-item">
+					<a class="govuk-breadcrumbs__link" href="/v2/find-project.html">Find project information</a>
+				</li>
+				<li class="govuk-breadcrumbs__list-item">
+					<a class="govuk-breadcrumbs__link" href="/v2/find-project-results.html">Find a project</a>
+				</li>
+				<li class="govuk-breadcrumbs__list-item">
+					<a class="govuk-breadcrumbs__link" href="/v2/find-project-summary.html">Project Regenerate green
+						spaces</a>
+				</li>
+				<li class="govuk-breadcrumbs__list-item">
+					<a class="govuk-breadcrumbs__link" href="#">Organisation profile Canterbury City Council</a>
+				</li>
+			</ol>
 		</div>
-	</div>
-	<main id="main-content" role="main">
-		<section class="govuk-main-wrapper pfs-section-bg-alt">
-			<div class="govuk-width-container">
-				<h1 class="govuk-heading-xl">Find a funded organisation</h1>
-				<form action="/v2/funded-organisation-results.html" method="post" novalidate>
-					<div class="govuk-form-group">
-						<label class="govuk-label" for="search">
-							Search
-						</label>
-						<input class="govuk-input govuk-input govuk-input--width-20" id="search" name="search"
-							type="text" value="Canterbury">
-					</div>
-					<button class="govuk-button" data-module="govuk-button">
-						Search
-					</button>
-				</form>
-			</div>
-			</div>
-		</section>
-		<section class="govuk-main-wrapper">
-			<div class="govuk-width-container">
-				<div class="govuk-grid-row">
-					<div class="govuk-grid-column-full">
-						<h2 class="govuk-heading-l">Search Results</h2>
-						<p class="govuk-hint">2 search results</p>
-						<ul class="govuk-list govuk-!-margin-bottom-0">
-							<li>
-								<a class="govuk-link" href="#">Canterbury City Council</a>
-							</li>
-							<li>
-								<a class="govuk-link" href="#">Chelmsford City Council</a>
-							</li>
-						</ul>
-					</div>
+		<main class="govuk-main-wrapper" id="main-content" role="main">
+			<h1 class="govuk-heading-xl">Project summary: Regenerate green spaces</h1>
+			<div class="govuk-grid-row">
+				<div class="govuk-grid-column-two-thirds">
+					<dl class="govuk-summary-list">
+						<div class="govuk-summary-list__row">
+							<dt class="govuk-summary-list__key">
+								Funding source:
+							</dt>
+							<dd class="govuk-summary-list__value">
+								Levelling Up, Towns Fund
+							</dd>
+						</div>
+						<div class="govuk-summary-list__row">
+							<dt class="govuk-summary-list__key">
+								Area:
+							</dt>
+							<dd class="govuk-summary-list__value">
+								South East
+							</dd>
+						</div>
+					</dl>
+					<dl class="govuk-summary-list">
+						<div class="govuk-summary-list__row">
+							<dt class="govuk-summary-list__key">
+								Funding received to date:
+							</dt>
+							<dd class="govuk-summary-list__value">
+								45,000,000
+							</dd>
+						</div>
+					</dl>
+					<dl class="govuk-summary-list">
+						<div class="govuk-summary-list__row">
+							<dt class="govuk-summary-list__key">
+								Project contact:
+							</dt>
+							<dd class="govuk-summary-list__value">
+								<a class="govuk-link" href="#">sara.long@lincolnshire.gov.uk</a>, <a class="govuk-link"
+									href="#">sally.law@lincolnshire.gov.uk</a>
+							</dd>
+						</div>
+					</dl>
+					<p class="govuk-heading-s">Funded rojects</p>
+					<ul class="govuk-list govuk-list--bullet">
+						<li>
+							<a class="govuk-link" href="#">LUF 89232- Regenerate green spaces - Canterbury City Council
+								(Levelling Up Fund)</a>
+						</li>
+						<li>
+							<a class="govuk-link" href="#">TF 26534 - High Street redevelopment - Canterbury City
+								Council (Towns Fund)</a>
+						</li>
+					</ul>
 				</div>
 			</div>
-		</section>
-	</main>
+		</main>
+	</div>
 
 	<footer class="govuk-footer" role="contentinfo">
 		<div class="govuk-width-container">
