--- a/v2/find-project-results.html
+++ b/v2/find-project-results.html
@@ -65,10 +65,10 @@
 						<a class="govuk-breadcrumbs__link" href="/v2/index.html">Funded projects</a>
 					</li>
 					<li class="govuk-breadcrumbs__list-item">
-						<a class="govuk-breadcrumbs__link" href="/v2/index.html">Find project information</a>
+						<a class="govuk-breadcrumbs__link" href="#">Find project information</a>
 					</li>
 					<li class="govuk-breadcrumbs__list-item">
-						<a class="govuk-breadcrumbs__link" href="#">Find a funded organisation</a>
+						<a class="govuk-breadcrumbs__link" href="#">Find a project</a>
 					</li>
 				</ol>
 			</div>
@@ -77,14 +77,14 @@
 	<main id="main-content" role="main">
 		<section class="govuk-main-wrapper pfs-section-bg-alt">
 			<div class="govuk-width-container">
-				<h1 class="govuk-heading-xl">Find a funded organisation</h1>
-				<form action="/v2/funded-organisation-results.html" method="post" novalidate>
+				<h1 class="govuk-heading-xl">Find a project</h1>
+				<form action="/v2/find-project-results.html" method="post" novalidate>
 					<div class="govuk-form-group">
 						<label class="govuk-label" for="search">
 							Search
 						</label>
 						<input class="govuk-input govuk-input govuk-input--width-20" id="search" name="search"
-							type="text">
+							type="text" value="Redevelopment">
 					</div>
 					<button class="govuk-button" data-module="govuk-button">
 						Search
@@ -97,113 +97,20 @@
 			<div class="govuk-width-container">
 				<div class="govuk-grid-row">
 					<div class="govuk-grid-column-full">
-						<h2 class="govuk-heading-l">List of funded organisations</h2>
-						<div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
-							<div class="govuk-accordion__section ">
-								<div class="govuk-accordion__section-header">
-									<h2 class="govuk-accordion__section-heading">
-										<span class="govuk-accordion__section-button" id="accordion-default-heading-1">
-											A
-										</span>
-									</h2>
-								</div>
-								<div id="accordion-default-content-1" class="govuk-accordion__section-content"
-									aria-labelledby="accordion-default-heading-1">
-									<ul class="govuk-list govuk-!-margin-bottom-0">
-										<li>
-											<a class="govuk-link" href="#">Adur and Worthing Borough Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Adur District Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Allerdale Borough Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Amber Valley Borough Council</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="govuk-accordion__section ">
-								<div class="govuk-accordion__section-header">
-									<h2 class="govuk-accordion__section-heading">
-										<span class="govuk-accordion__section-button" id="accordion-default-heading-2">
-											B
-										</span>
-									</h2>
-								</div>
-								<div id="accordion-default-content-2" class="govuk-accordion__section-content"
-									aria-labelledby="accordion-default-heading-2">
-									<ul class="govuk-list govuk-!-margin-bottom-0">
-										<li>
-											<a class="govuk-link" href="#">Babergh District Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Barnsley Metropolitan Borough Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Barrow-in-Furness Borough Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Basildon Borough Council</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="govuk-accordion__section ">
-								<div class="govuk-accordion__section-header">
-									<h2 class="govuk-accordion__section-heading">
-										<span class="govuk-accordion__section-button" id="accordion-default-heading-3">
-											C
-										</span>
-									</h2>
-								</div>
-								<div id="accordion-default-content-3" class="govuk-accordion__section-content"
-									aria-labelledby="accordion-default-heading-3">
-									<ul class="govuk-list govuk-!-margin-bottom-0">
-										<li>
-											<a class="govuk-link" href="#">Caerphilly County Borough Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Calderdale Metropolitan Borough Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Cambridge City Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Cambridgeshire County Council</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="govuk-accordion__section ">
-								<div class="govuk-accordion__section-header">
-									<h2 class="govuk-accordion__section-heading">
-										<span class="govuk-accordion__section-button" id="accordion-default-heading-4">
-											D
-										</span>
-									</h2>
-								</div>
-								<div id="accordion-default-content-4" class="govuk-accordion__section-content"
-									aria-labelledby="accordion-default-heading-4">
-									<ul class="govuk-list govuk-!-margin-bottom-0">
-										<li>
-											<a class="govuk-link" href="#">Dacorum Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Darlington Borough Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Dartford Borough Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Daventry District Council</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
+						<h2 class="govuk-heading-l">Search Results</h2>
+						<p class="govuk-hint">2 search results</p>
+						<ul class="govuk-list govuk-!-margin-bottom-0">
+							<li>
+								<a class="govuk-link" href="/v2/find-project-summary.html">Aarondale community centre
+									redevelopment
+									(TF902) - Canterbury City Council (Towns Fund)</a>
+							</li>
+							<li>
+								<a class="govuk-link" href="/v2/find-project-summary.html">Annesbuckle community centre
+									development
+									(TF123) - Canterbury City Council (Towns Fund)</a>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
