--- a/v1/journey-one/search/project-summary.html
+++ b/v1/journey-one/search/project-summary.html
@@ -72,7 +72,7 @@
       <h1 class="govuk-heading-xl">Project summary: Fenn's shopping centre footfall</h1>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-          <dl class="govuk-summary-list govuk-summary-list--no-border">
+          <dl class="govuk-summary-list">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
                 Last updated:
@@ -108,7 +108,7 @@
           </dl>
           <p class="govuk-body"><strong>Project aim: </strong>The project will use funding to regenerate the shopping
             centre, support local retailers and improve community feel.</p>
-          <dl class="govuk-summary-list govuk-summary-list--no-border">
+          <dl class="govuk-summary-list">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
                 Project contact:
@@ -131,7 +131,7 @@
                 Project status:
               </dt>
               <dd class="govuk-summary-list__value">
-                <strong class="govuk-tag govuk-tag--yellow">
+                <strong class="govuk-tag govuk-tag--red">
                   Delayed
                 </strong>
               </dd>
