--- a/v1/journey-two/search/project.html
+++ b/v1/journey-two/search/project.html
@@ -71,7 +71,7 @@
       <h1 class="govuk-heading-xl">Greater London footfall project outcomes 2021</h1>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-          <dl class="govuk-summary-list govuk-summary-list--no-border">
+          <dl class="govuk-summary-list">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
                 Fund(s):
