--- a/v1/journey-one/search/project.html
+++ b/v1/journey-one/search/project.html
@@ -75,7 +75,8 @@
           <p class="govuk-body"><strong>Project summary: </strong>Fenn's shopping centre in Lincoln city centre has
             experienced a decline in footfall in recent years. In 2021, local businesses worked together to increase
             footfall in the shopping centre and surrounding area to support local retailers.</p>
-          <p class="govuk-body"><a class="govuk-link" href="/v1/journey-one/search/project-summary.html">Read full project
+          <p class="govuk-body"><a class="govuk-link" href="/v1/journey-one/search/project-summary.html">Read full
+              project
               summary</a>
           </p>
           <dl class="govuk-summary-list">
