--- a/v1/journey-two/search/project.html
+++ b/v1/journey-two/search/project.html
@@ -103,7 +103,8 @@
               <a class="govuk-link" href="#">Rainham footfall 2021</a>
             </li>
             <li>
-              <a class="govuk-link" href="/v1/journey-two/search/project-summary.html">Fenn's shopping centre footfall 2021</a>
+              <a class="govuk-link" href="/v1/journey-two/search/project-summary.html">Fenn's shopping centre footfall
+                2021</a>
             </li>
             <li>
               <a class="govuk-link" href="#">Bakely footfall 2021</a>
