--- a/v1/journey-one/search/project-summary.html
+++ b/v1/journey-one/search/project-summary.html
@@ -59,7 +59,8 @@
           <a class="govuk-breadcrumbs__link" href="/v1/journey-one/index.html">Search results</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/journey-one/search/project.html">Fenn's shopping centre footfall project
+          <a class="govuk-breadcrumbs__link" href="/v1/journey-one/search/project.html">Fenn's shopping centre footfall
+            project
             outcomes
             2021</a>
         </li>
