--- a/v2/find-project-city-council-summary.html
+++ b/v2/find-project-city-council-summary.html
@@ -22,7 +22,7 @@
 	<!--<![endif]-->
 
 	<!--[if IE 8]>
-    <link href="/stylesheets/govuk-frontend-ie8-4.4.0.min.css" rel="stylesheet">
+	<link href="/stylesheets/govuk-frontend-ie8-4.4.0.min.css" rel="stylesheet">
   <![endif]-->
 </head>
 
@@ -39,12 +39,12 @@
 				<a href="/" class="govuk-header__link govuk-header__link--homepage">
 					<span class="govuk-header__logotype">
 						<!--[if gt IE 8]><!-->
-						<img src="/assets/images/govuk-mask-icon.svg"
-							class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
+						<img src="/assets/images/govuk-mask-icon.svg" class="govuk-header__logotype-crown-fallback-image" width="36"
+							height="32">
 						<!--<![endif]-->
 						<!--[if IE 8]>
-          <img src="/assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
-          <![endif]-->
+						<img src="/assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
+						<![endif]-->
 						<span class="govuk-header__logotype-text">GOV.UK</span>
 					</span>
 				</a>
@@ -149,8 +149,7 @@
 					<span class="govuk-footer__licence-description">
 						All content is available under the
 						<a class="govuk-footer__link"
-							href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
-							rel="license">Open
+							href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open
 							Government Licence v3.0</a>, except where otherwise stated
 					</span>
 				</div>
