--- a/v2/find-project-summary.html
+++ b/v2/find-project-summary.html
@@ -39,8 +39,8 @@
 				<a href="/" class="govuk-header__link govuk-header__link--homepage">
 					<span class="govuk-header__logotype">
 						<!--[if gt IE 8]><!-->
-						<img src="/assets/images/govuk-mask-icon.svg"
-							class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
+						<img src="/assets/images/govuk-mask-icon.svg" class="govuk-header__logotype-crown-fallback-image" width="36"
+							height="32">
 						<!--<![endif]-->
 						<!--[if IE 8]>
           <img src="/assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
@@ -239,8 +239,7 @@
 					<span class="govuk-footer__licence-description">
 						All content is available under the
 						<a class="govuk-footer__link"
-							href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
-							rel="license">Open
+							href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open
 							Government Licence v3.0</a>, except where otherwise stated
 					</span>
 				</div>
