--- a/v2/funded-organisation-results.html
+++ b/v2/funded-organisation-results.html
@@ -39,8 +39,8 @@
 				<a href="/" class="govuk-header__link govuk-header__link--homepage">
 					<span class="govuk-header__logotype">
 						<!--[if gt IE 8]><!-->
-						<img src="/assets/images/govuk-mask-icon.svg"
-							class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
+						<img src="/assets/images/govuk-mask-icon.svg" class="govuk-header__logotype-crown-fallback-image" width="36"
+							height="32">
 						<!--<![endif]-->
 						<!--[if IE 8]>
 						<img src="/assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
@@ -83,8 +83,8 @@
 						<label class="govuk-label" for="search">
 							Search
 						</label>
-						<input class="govuk-input govuk-input govuk-input--width-20" id="search" name="search"
-							type="text" value="Canterbury">
+						<input class="govuk-input govuk-input govuk-input--width-20" id="search" name="search" type="text"
+							value="Canterbury">
 					</div>
 					<button class="govuk-button" data-module="govuk-button">
 						Search
@@ -125,8 +125,7 @@
 					<span class="govuk-footer__licence-description">
 						All content is available under the
 						<a class="govuk-footer__link"
-							href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
-							rel="license">Open
+							href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open
 							Government Licence v3.0</a>, except where otherwise stated
 					</span>
 				</div>
