--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="../assets/images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="./assets/images/favicon.ico" type="image/x-icon">
   <link rel="mask-icon" href="./assets/images/govuk-mask-icon.svg" color="#0b0c0c">
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/govuk-apple-touch-icon-180x180.png">
   <link rel="apple-touch-icon" sizes="167x167" href="./assets/images/govuk-apple-touch-icon-167x167.png">
@@ -17,12 +17,12 @@
   <link rel="apple-touch-icon" href="./assets/images/govuk-apple-touch-icon.png">
 
   <!--[if !IE 8]><!-->
-  <link href="/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
-  <link href="/stylesheets/pfs-custom-styles.css" rel="stylesheet">
+  <link href="./stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
+  <link href="./stylesheets/pfs-custom-styles.css" rel="stylesheet">
   <!--<![endif]-->
 
   <!--[if IE 8]>
-    <link href="/stylesheets/govuk-frontend-ie8-4.4.0.min.css" rel="stylesheet">
+    <link href="./stylesheets/govuk-frontend-ie8-4.4.0.min.css" rel="stylesheet">
   <![endif]-->
 </head>
 
@@ -36,7 +36,7 @@
   <header class="govuk-header" role="banner" data-module="govuk-header">
     <div class="govuk-header__container govuk-width-container">
       <div class="govuk-header__logo govuk-header__logo pfs-header__logo">
-        <a href="/" class="govuk-header__link govuk-header__link--homepage">
+        <a href="./" class="govuk-header__link govuk-header__link--homepage">
           <span class="govuk-header__logotype">
             <!--[if gt IE 8]><!-->
             <img src="./assets/images/govuk-mask-icon.svg" class="govuk-header__logotype-crown-fallback-image" width="36"
@@ -57,8 +57,8 @@
       <h1 class="govuk-heading-xl">Alpha - M&E Design Exploration</h1>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds-from-desktop">
-          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="/v1">Version 1</a></h2>
-          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="/v2">Version 2</a></h2>
+          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="./v1">Version 1</a></h2>
+          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="./v2">Version 2</a></h2>
         </div>
       </div>
     </main>
@@ -89,7 +89,7 @@
     </div>
   </footer>
 
-  <script src="/javascript/govuk-frontend-4.4.0.min.js"></script>
+  <script src="./javascript/govuk-frontend-4.4.0.min.js"></script>
   <script>
     window.GOVUKFrontend.initAll()
   </script>
