--- a/v1/journey-one/search/project.html
+++ b/v1/journey-one/search/project.html
@@ -9,20 +9,20 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/assets/images/favicon.ico" type="image/x-icon">
-  <link rel="mask-icon" href="/assets/images/govuk-mask-icon.svg" color="#0b0c0c">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-apple-touch-icon-180x180.png">
-  <link rel="apple-touch-icon" sizes="167x167" href="/assets/images/govuk-apple-touch-icon-167x167.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/govuk-apple-touch-icon-152x152.png">
-  <link rel="apple-touch-icon" href="/assets/images/govuk-apple-touch-icon.png">
+  <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="../../../assets/images/favicon.ico" type="image/x-icon">
+  <link rel="mask-icon" href="../../../assets/images/govuk-mask-icon.svg" color="#0b0c0c">
+  <link rel="apple-touch-icon" sizes="180x180" href="../../../assets/images/govuk-apple-touch-icon-180x180.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="../../../assets/images/govuk-apple-touch-icon-167x167.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="../../../assets/images/govuk-apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" href="../../../assets/images/govuk-apple-touch-icon.png">
 
   <!--[if !IE 8]><!-->
-  <link href="/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
-  <link href="/stylesheets/pfs-custom-styles.css" rel="stylesheet">
+  <link href="../../../assets/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
+  <link href="../../../assets/stylesheets/pfs-custom-styles.css" rel="stylesheet">
   <!--<![endif]-->
 
   <!--[if IE 8]>
-    <link href="/stylesheets/govuk-frontend-ie8-4.4.0.min.css" rel="stylesheet">
+    <link href="../../../assets/stylesheets/govuk-frontend-ie8-4.4.0.min.css" rel="stylesheet">
   <![endif]-->
 </head>
 
@@ -36,14 +36,14 @@
   <header class="govuk-header" role="banner" data-module="govuk-header">
     <div class="govuk-header__container govuk-width-container">
       <div class="govuk-header__logo">
-        <a href="/" class="govuk-header__link govuk-header__link--homepage">
+        <a href="../../../" class="govuk-header__link govuk-header__link--homepage">
           <span class="govuk-header__logotype">
             <!--[if gt IE 8]><!-->
-            <img src="/assets/images/govuk-mask-icon.svg" class="govuk-header__logotype-crown-fallback-image" width="36"
+            <img src="../../../assets/images/govuk-mask-icon.svg" class="govuk-header__logotype-crown-fallback-image" width="36"
               height="32">
             <!--<![endif]-->
             <!--[if IE 8]>
-          <img src="/assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
+          <img src="../../../assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
           <![endif]-->
             <span class="govuk-header__logotype-text">GOV.UK</span>
           </span>
@@ -56,10 +56,10 @@
     <div class="govuk-breadcrumbs">
       <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/journey-one/index.html">Find project data</a>
+          <a class="govuk-breadcrumbs__link" href="../../../v1/journey-one/index.html">Find project data</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/journey-one/index.html">Search results</a>
+          <a class="govuk-breadcrumbs__link" href="../../../v1/journey-one/index.html">Search results</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
           <a class="govuk-breadcrumbs__link" href="#">Fenn's shopping centre footfall project
@@ -75,7 +75,7 @@
           <p class="govuk-body"><strong>Project summary: </strong>Fenn's shopping centre in Lincoln city centre has
             experienced a decline in footfall in recent years. In 2021, local businesses worked together to increase
             footfall in the shopping centre and surrounding area to support local retailers.</p>
-          <p class="govuk-body"><a class="govuk-link" href="/v1/journey-one/search/project-summary.html">Read full
+          <p class="govuk-body"><a class="govuk-link" href="../../../v1/journey-one/search/project-summary.html">Read full
               project
               summary</a>
           </p>
@@ -235,7 +235,7 @@
     </div>
   </footer>
 
-  <script src="/javascript/govuk-frontend-4.4.0.min.js"></script>
+  <script src="../../../assets/javascript/govuk-frontend-4.4.0.min.js"></script>
   <script>
     window.GOVUKFrontend.initAll()
   </script>
