--- a/v1/journey-two/index.html
+++ b/v1/journey-two/index.html
@@ -9,20 +9,20 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/assets/images/favicon.ico" type="image/x-icon">
-  <link rel="mask-icon" href="/assets/images/govuk-mask-icon.svg" color="#0b0c0c">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-apple-touch-icon-180x180.png">
-  <link rel="apple-touch-icon" sizes="167x167" href="/assets/images/govuk-apple-touch-icon-167x167.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/govuk-apple-touch-icon-152x152.png">
-  <link rel="apple-touch-icon" href="/assets/images/govuk-apple-touch-icon.png">
+  <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="../../assets/images/favicon.ico" type="image/x-icon">
+  <link rel="mask-icon" href="../../assets/images/govuk-mask-icon.svg" color="#0b0c0c">
+  <link rel="apple-touch-icon" sizes="180x180" href="../../assets/images/govuk-apple-touch-icon-180x180.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="../../assets/images/govuk-apple-touch-icon-167x167.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="../../assets/images/govuk-apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" href="../../assets/images/govuk-apple-touch-icon.png">
 
   <!--[if !IE 8]><!-->
-  <link href="/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
-  <link href="/stylesheets/pfs-custom-styles.css" rel="stylesheet">
+  <link href="../../assets/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
+  <link href="../../assets/stylesheets/pfs-custom-styles.css" rel="stylesheet">
   <!--<![endif]-->
 
   <!--[if IE 8]>
-    <link href="/stylesheets/govuk-frontend-ie8-4.4.0.min.css" rel="stylesheet">
+    <link href="../../assets/stylesheets/govuk-frontend-ie8-4.4.0.min.css" rel="stylesheet">
   <![endif]-->
 </head>
 
@@ -39,11 +39,11 @@
         <a href="/" class="govuk-header__link govuk-header__link--homepage">
           <span class="govuk-header__logotype">
             <!--[if gt IE 8]><!-->
-            <img src="/assets/images/govuk-mask-icon.svg" class="govuk-header__logotype-crown-fallback-image" width="36"
+            <img src="../../assets/images/govuk-mask-icon.svg" class="govuk-header__logotype-crown-fallback-image" width="36"
               height="32">
             <!--<![endif]-->
             <!--[if IE 8]>
-          <img src="/assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
+          <img src="../../assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
           <![endif]-->
             <span class="govuk-header__logotype-text">GOV.UK</span>
           </span>
@@ -56,11 +56,11 @@
     <div class="govuk-breadcrumbs">
       <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/index.html">Department for Levelling Up, Housing &
+          <a class="govuk-breadcrumbs__link" href="../../v1/index.html">Department for Levelling Up, Housing &
             Communities</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/index.html">Funded projects</a>
+          <a class="govuk-breadcrumbs__link" href="../../v1/index.html">Funded projects</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
           <a class="govuk-breadcrumbs__link" href="#">Find project data</a>
@@ -160,10 +160,10 @@
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-one-quarter">
               <div class="pfs-card-block">
-                <img class="govuk-!-width-full" src="/assets/images/preview-placeholder.png" alt="">
+                <img class="govuk-!-width-full" src="../../assets/images/preview-placeholder.png" alt="">
                 <div class="pfs-card-block__content">
                   <p class="govuk-body-s"><a class="govuk-link govuk-!-font-weight-bold"
-                      href="/v1/journey-two/search/project.html">Fenn's
+                      href="../../v1/journey-two/search/project.html">Fenn's
                       shopping centre
                       footfall project
                       outcomes 2021</a></p>
@@ -196,7 +196,7 @@
             </div>
             <div class="govuk-grid-column-one-quarter">
               <div class="pfs-card-block">
-                <img class="govuk-!-width-full" src="/assets/images/preview-placeholder.png" alt="">
+                <img class="govuk-!-width-full" src="../../assets/images/preview-placeholder.png" alt="">
                 <div class="pfs-card-block__content">
                   <p class="govuk-body-s"><a class="govuk-link govuk-!-font-weight-bold" href="#">Hedge Hill project
                       outcomes 2021</a></p>
@@ -258,7 +258,7 @@
     </div>
   </footer>
 
-  <script src="/javascript/govuk-frontend-4.4.0.min.js"></script>
+  <script src="../../assets/javascript/govuk-frontend-4.4.0.min.js"></script>
   <script>
     window.GOVUKFrontend.initAll()
   </script>
