--- a/v1/journey-two/search/project.html
+++ b/v1/journey-two/search/project.html
@@ -9,20 +9,20 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/assets/images/favicon.ico" type="image/x-icon">
-  <link rel="mask-icon" href="/assets/images/govuk-mask-icon.svg" color="#0b0c0c">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-apple-touch-icon-180x180.png">
-  <link rel="apple-touch-icon" sizes="167x167" href="/assets/images/govuk-apple-touch-icon-167x167.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/govuk-apple-touch-icon-152x152.png">
-  <link rel="apple-touch-icon" href="/assets/images/govuk-apple-touch-icon.png">
+  <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="../../../assets/images/favicon.ico" type="image/x-icon">
+  <link rel="mask-icon" href="../../../assets/images/govuk-mask-icon.svg" color="#0b0c0c">
+  <link rel="apple-touch-icon" sizes="180x180" href="../../../assets/images/govuk-apple-touch-icon-180x180.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="../../../assets/images/govuk-apple-touch-icon-167x167.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="../../../assets/images/govuk-apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" href="../../../assets/images/govuk-apple-touch-icon.png">
 
   <!--[if !IE 8]><!-->
-  <link href="/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
-  <link href="/stylesheets/pfs-custom-styles.css" rel="stylesheet">
+  <link href="../../../assets/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
+  <link href="../../../assets/stylesheets/pfs-custom-styles.css" rel="stylesheet">
   <!--<![endif]-->
 
   <!--[if IE 8]>
-    <link href="/stylesheets/govuk-frontend-ie8-4.4.0.min.css" rel="stylesheet">
+    <link href="../../../assets/stylesheets/govuk-frontend-ie8-4.4.0.min.css" rel="stylesheet">
   <![endif]-->
 </head>
 
@@ -39,11 +39,11 @@
         <a href="/" class="govuk-header__link govuk-header__link--homepage">
           <span class="govuk-header__logotype">
             <!--[if gt IE 8]><!-->
-            <img src="/assets/images/govuk-mask-icon.svg" class="govuk-header__logotype-crown-fallback-image" width="36"
+            <img src="../../../assets/images/govuk-mask-icon.svg" class="govuk-header__logotype-crown-fallback-image" width="36"
               height="32">
             <!--<![endif]-->
             <!--[if IE 8]>
-          <img src="/assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
+          <img src="../../../assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
           <![endif]-->
             <span class="govuk-header__logotype-text">GOV.UK</span>
           </span>
@@ -56,10 +56,10 @@
     <div class="govuk-breadcrumbs">
       <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/journey-two/index.html">Find project data</a>
+          <a class="govuk-breadcrumbs__link" href="../../../v1/journey-two/index.html">Find project data</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/journey-two/index.html">Search results</a>
+          <a class="govuk-breadcrumbs__link" href="../../../v1/journey-two/index.html">Search results</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
           <a class="govuk-breadcrumbs__link" href="#">Greater London footfall project outcomes
@@ -103,7 +103,7 @@
               <a class="govuk-link" href="#">Rainham footfall 2021</a>
             </li>
             <li>
-              <a class="govuk-link" href="/v1/journey-two/search/project-summary.html">Fenn's shopping centre footfall
+              <a class="govuk-link" href="../../../v1/journey-two/search/project-summary.html">Fenn's shopping centre footfall
                 2021</a>
             </li>
             <li>
@@ -132,7 +132,7 @@
             </div>
           </form>
           <h3 class="govuk-heading-m govuk-!-margin-top-6">Preview</h3>
-          <img class="govuk-!-width-two-thirds pfs-img-border" src="/assets/images/graph-placeholder.png" alt="">
+          <img class="govuk-!-width-two-thirds pfs-img-border" src="../../../assets/images/graph-placeholder.png" alt="">
         </div>
         <div class="govuk-grid-column-full">
           <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
@@ -179,7 +179,7 @@
     </div>
   </footer>
 
-  <script src="/javascript/govuk-frontend-4.4.0.min.js"></script>
+  <script src="../../../assets/javascript/govuk-frontend-4.4.0.min.js"></script>
   <script>
     window.GOVUKFrontend.initAll()
   </script>
