--- a/v2/download-data.html
+++ b/v2/download-data.html
@@ -17,14 +17,14 @@
 	<link rel="apple-touch-icon" href="/assets/images/govuk-apple-touch-icon.png">
 
 	<!--[if !IE 8]><!-->
-	<link href="/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
-	<link href="/stylesheets/dropdown.min.css" rel="stylesheet">
-	<link href="/stylesheets/transition.min.css" rel="stylesheet">
-	<link href="/stylesheets/pfs-custom-styles.css" rel="stylesheet">
+	<link href="/assets/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
+	<link href="/assets/stylesheets/dropdown.min.css" rel="stylesheet">
+	<link href="/assets/stylesheets/transition.min.css" rel="stylesheet">
+	<link href="/assets/stylesheets/pfs-custom-styles.css" rel="stylesheet">
 	<!--<![endif]-->
 
 	<!--[if IE 8]>
-		<link href="/stylesheets/govuk-frontend-ie8-4.4.0.min.css" rel="stylesheet">
+		<link href="/assets/stylesheets/govuk-frontend-ie8-4.4.0.min.css" rel="stylesheet">
 	<![endif]-->
 </head>
 
@@ -34,8 +34,8 @@
 	</script>
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"
 		integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-	<script src="/javascript/dropdown.min.js"></script>
-	<script src="/javascript/transition.min.js"></script>
+	<script src="/assets/javascript/dropdown.min.js"></script>
+	<script src="/assets/javascript/transition.min.js"></script>
 	<script>
 		$(document).ready(function () {
 			console.log("ready!");
@@ -290,7 +290,7 @@
 		</div>
 	</footer>
 
-	<script src="/javascript/govuk-frontend-4.4.0.min.js"></script>
+	<script src="/assets/javascript/govuk-frontend-4.4.0.min.js"></script>
 	<script>
 		window.GOVUKFrontend.initAll()
 	</script>
