link reconfig - version 2

--- a/v2/download-data.html
+++ b/v2/download-data.html
@@ -9,22 +9,22 @@
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-	<link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/assets/images/favicon.ico" type="image/x-icon">
-	<link rel="mask-icon" href="/assets/images/govuk-mask-icon.svg" color="#0b0c0c">
-	<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-apple-touch-icon-180x180.png">
-	<link rel="apple-touch-icon" sizes="167x167" href="/assets/images/govuk-apple-touch-icon-167x167.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/assets/images/govuk-apple-touch-icon-152x152.png">
-	<link rel="apple-touch-icon" href="/assets/images/govuk-apple-touch-icon.png">
+	<link rel="shortcut icon" sizes="16x16 32x32 48x48" href="../assets/images/favicon.ico" type="image/x-icon">
+	<link rel="mask-icon" href="../assets/images/govuk-mask-icon.svg" color="#0b0c0c">
+	<link rel="apple-touch-icon" sizes="180x180" href="../assets/images/govuk-apple-touch-icon-180x180.png">
+	<link rel="apple-touch-icon" sizes="167x167" href="../assets/images/govuk-apple-touch-icon-167x167.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="../assets/images/govuk-apple-touch-icon-152x152.png">
+	<link rel="apple-touch-icon" href="../assets/images/govuk-apple-touch-icon.png">
 
 	<!--[if !IE 8]><!-->
-	<link href="/assets/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
-	<link href="/assets/stylesheets/dropdown.min.css" rel="stylesheet">
-	<link href="/assets/stylesheets/transition.min.css" rel="stylesheet">
-	<link href="/assets/stylesheets/pfs-custom-styles.css" rel="stylesheet">
+	<link href="../assets/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
+	<link href="../assets/stylesheets/dropdown.min.css" rel="stylesheet">
+	<link href="../assets/stylesheets/transition.min.css" rel="stylesheet">
+	<link href="../assets/stylesheets/pfs-custom-styles.css" rel="stylesheet">
 	<!--<![endif]-->
 
 	<!--[if IE 8]>
-		<link href="/assets/stylesheets/govuk-frontend-ie8-4.4.0.min.css" rel="stylesheet">
+		<link href="../assets/stylesheets/govuk-frontend-ie8-4.4.0.min.css" rel="stylesheet">
 	<![endif]-->
 </head>
 
@@ -34,8 +34,8 @@
 	</script>
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"
 		integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-	<script src="/assets/javascript/dropdown.min.js"></script>
-	<script src="/assets/javascript/transition.min.js"></script>
+	<script src="../assets/javascript/dropdown.min.js"></script>
+	<script src="../assets/javascript/transition.min.js"></script>
 	<script>
 		$(document).ready(function () {
 			console.log("ready!");
@@ -48,14 +48,14 @@
 	<header class="govuk-header" role="banner" data-module="govuk-header">
 		<div class="govuk-header__container govuk-width-container">
 			<div class="govuk-header__logo">
-				<a href="/" class="govuk-header__link govuk-header__link--homepage">
+				<a href="../" class="govuk-header__link govuk-header__link--homepage">
 					<span class="govuk-header__logotype">
 						<!--[if gt IE 8]><!-->
-						<img src="/assets/images/govuk-mask-icon.svg" class="govuk-header__logotype-crown-fallback-image" width="36"
+						<img src="../assets/images/govuk-mask-icon.svg" class="govuk-header__logotype-crown-fallback-image" width="36"
 							height="32">
 						<!--<![endif]-->
 						<!--[if IE 8]>
-					<img src="/assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
+					<img src="../assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
 					<![endif]-->
 						<span class="govuk-header__logotype-text">GOV.UK</span>
 					</span>
@@ -68,14 +68,14 @@
 		<div class="govuk-breadcrumbs">
 			<ol class="govuk-breadcrumbs__list">
 				<li class="govuk-breadcrumbs__list-item">
-					<a class="govuk-breadcrumbs__link" href="/v2/index.html">Department for Levelling Up, Housing &
+					<a class="govuk-breadcrumbs__link" href="../v2/index.html">Department for Levelling Up, Housing &
 						Communities</a>
 				</li>
 				<li class="govuk-breadcrumbs__list-item">
-					<a class="govuk-breadcrumbs__link" href="/v2/index.html">Funded projects</a>
+					<a class="govuk-breadcrumbs__link" href="../v2/index.html">Funded projects</a>
 				</li>
 				<li class="govuk-breadcrumbs__list-item">
-					<a class="govuk-breadcrumbs__link" href="/v2/index.html">Find project information</a>
+					<a class="govuk-breadcrumbs__link" href="../v2/index.html">Find project information</a>
 				</li>
 				<li class="govuk-breadcrumbs__list-item">
 					<a class="govuk-breadcrumbs__link" href="#">Download data</a>
@@ -86,7 +86,7 @@
 			<h1 class="govuk-heading-xl">Download monitoring and evaluation data</h1>
 			<div class="govuk-grid-row">
 				<div class="govuk-grid-column-two-thirds">
-					<form action="/v2/download-data-results.html#results" method="post" novalidate>
+					<form action="../v2/download-data-results.html#results" method="post" novalidate>
 						<div class="govuk-form-group">
 							<label class="govuk-label" for="funds">
 								Filter by fund
@@ -290,7 +290,7 @@
 		</div>
 	</footer>
 
-	<script src="/assets/javascript/govuk-frontend-4.4.0.min.js"></script>
+	<script src="../assets/javascript/govuk-frontend-4.4.0.min.js"></script>
 	<script>
 		window.GOVUKFrontend.initAll()
 	</script>
