--- a/v1/journey-one/index.html
+++ b/v1/journey-one/index.html
@@ -72,7 +72,7 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <p class="govuk-body-l">Use this tool to find monitoring and evaluation data for funded projects.</p>
-          <form action="#results" method="post" novalidate>
+          <form action="#" method="post" novalidate>
             <div class="govuk-form-group">
               <label class="govuk-label" for="submitted-by">
                 Data submitted by
@@ -147,7 +147,7 @@
                 <option value="csv" selected>CSV</option>
               </select>
             </div>
-            <button class="govuk-button govuk-!-margin-bottom-0" data-module="govuk-button">Search</button>
+            <a href="#results" class="govuk-button govuk-!-margin-bottom-0" data-module="govuk-button">Search</a>
           </form>
         </div>
         <div class="govuk-grid-column-full">
