--- a/v2/download-data.html
+++ b/v2/download-data.html
@@ -86,7 +86,7 @@
 			<h1 class="govuk-heading-xl">Download monitoring and evaluation data</h1>
 			<div class="govuk-grid-row">
 				<div class="govuk-grid-column-two-thirds">
-					<form action="../v2/download-data-results.html#results" method="post" novalidate>
+					<form action="#" method="post" novalidate>
 						<div class="govuk-form-group">
 							<label class="govuk-label" for="funds">
 								Filter by fund
@@ -252,9 +252,9 @@
 							</select>
 						</div>
 						<div class="govuk-button-group govuk-!-margin-bottom-0">
-							<button type="submit" class="govuk-button" data-module="govuk-button">
+							<a href="../v2/download-data-results.html#results" type="submit" class="govuk-button" data-module="govuk-button">
 								Download
-							</button>
+							</a>
 							<button class="govuk-button govuk-button--secondary" data-module="govuk-button">
 								Preview
 							</button>
