--- a/v2/download-data-results.html
+++ b/v2/download-data-results.html
@@ -279,20 +279,20 @@
 					</div>
 					<div class="govuk-grid-column-two-thirds">
 						<div class="govuk-form-group">
-							<label class="govuk-label govuk-date-input__label" for="timeframe-year">
+							<label class="govuk-label govuk-date-input__label govuk-!-font-weight-bold" for="timeframe-year">
 								Fund(s):
 							</label>
 							<strong class="govuk-tag govuk-tag--blue">LEVELLING UP FUND</strong>
 							<strong class="govuk-tag govuk-tag--blue">TOWNS FUND</strong>
 						</div>
 						<div class="govuk-form-group">
-							<label class="govuk-label govuk-date-input__label" for="timeframe-year">
+							<label class="govuk-label govuk-date-input__label govuk-!-font-weight-bold" for="timeframe-year">
 								Fund Recipient(s):
 							</label>
 							<strong class="govuk-tag govuk-tag--blue">SOUTH EAST</strong>
 						</div>
 						<div class="govuk-form-group">
-							<label class="govuk-label govuk-date-input__label" for="timeframe-year">
+							<label class="govuk-label govuk-date-input__label govuk-!-font-weight-bold" for="timeframe-year">
 								Data type(s):
 							</label>
 							<strong class="govuk-tag govuk-tag--blue">AIR QUALITY (N02)</strong>
