--- a/v2/find-project-results.html
+++ b/v2/find-project-results.html
@@ -78,17 +78,16 @@
 		<section class="govuk-main-wrapper pfs-section-bg-alt">
 			<div class="govuk-width-container">
 				<h1 class="govuk-heading-xl">Find a project</h1>
-				<form action="../v2/find-project-results.html" method="post" novalidate>
+				<form action="#" method="post" novalidate>
 					<div class="govuk-form-group">
 						<label class="govuk-label" for="search">
 							Search
 						</label>
-						<input class="govuk-input govuk-input govuk-input--width-20" id="search" name="search" type="text"
-							value="Redevelopment">
+						<input class="govuk-input govuk-input govuk-input--width-20" id="search" name="search" type="text" value="redevelopment">
 					</div>
-					<button class="govuk-button" data-module="govuk-button">
+					<a href="../v2/find-project-results.html" class="govuk-button" data-module="govuk-button">
 						Search
-					</button>
+					</a>
 				</form>
 			</div>
 			</div>
