--- a/v2/index.html
+++ b/v2/index.html
@@ -74,7 +74,7 @@
   <main id="main-content" role="main">
     <section class="govuk-main-wrapper pfs-section-bg-alt">
       <div class="govuk-width-container">
-        <h1 class="govuk-heading-xl">Find funded project data</h1>
+        <h1 class="govuk-heading-xl">Funded project information</h1>
         <p class="govuk-body-l govuk-!-margin-bottom-0">Use this tool to find monitoring and evaluation data and
           background information on funded projects.</p>
       </div>
