--- a/v2/find-project-city-council-summary.html
+++ b/v2/find-project-city-council-summary.html
@@ -79,7 +79,7 @@
 			</ol>
 		</div>
 		<main class="govuk-main-wrapper" id="main-content" role="main">
-			<h1 class="govuk-heading-xl">Project summary: Regenerate green spaces</h1>
+			<h1 class="govuk-heading-xl">Canterbury City Council</h1>
 			<div class="govuk-grid-row">
 				<div class="govuk-grid-column-two-thirds">
 					<dl class="govuk-summary-list">
