--- a/v2/find-project.html
+++ b/v2/find-project.html
@@ -78,16 +78,16 @@
 		<section class="govuk-main-wrapper pfs-section-bg-alt">
 			<div class="govuk-width-container">
 				<h1 class="govuk-heading-xl">Find a project</h1>
-				<form action="../v2/find-project-results.html" method="post" novalidate>
+				<form action="#" method="post" novalidate>
 					<div class="govuk-form-group">
 						<label class="govuk-label" for="search">
 							Search
 						</label>
 						<input class="govuk-input govuk-input govuk-input--width-20" id="search" name="search" type="text">
 					</div>
-					<button class="govuk-button" data-module="govuk-button">
+					<a href="../v2/find-project-results.html" class="govuk-button" data-module="govuk-button">
 						Search
-					</button>
+					</a>
 				</form>
 			</div>
 			</div>
@@ -96,7 +96,7 @@
 			<div class="govuk-width-container">
 				<div class="govuk-grid-row">
 					<div class="govuk-grid-column-full">
-						<h2 class="govuk-heading-l">List of funded organisations</h2>
+						<h2 class="govuk-heading-l">List of projects</h2>
 						<div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
 							<div class="govuk-accordion__section ">
 								<div class="govuk-accordion__section-header">
