--- a/v2/funded-organisation-results.html
+++ b/v2/funded-organisation-results.html
@@ -86,7 +86,7 @@
 						<input class="govuk-input govuk-input govuk-input--width-20" id="search" name="search" type="text"
 							value="Canterbury">
 					</div>
-					<a href="../v2/funded-organisation-city-council-summary.html" class="govuk-button" data-module="govuk-button">
+					<a href="../v2/funded-organisation-results.html" class="govuk-button" data-module="govuk-button">
 						Search
 					</a>
 				</form>
@@ -101,7 +101,7 @@
 						<p class="govuk-hint">2 search results</p>
 						<ul class="govuk-list govuk-!-margin-bottom-0">
 							<li>
-								<a class="govuk-link" href="#">Canterbury City Council</a>
+								<a class="govuk-link" href="../v2/funded-organisation-city-council-summary.html">Canterbury City Council</a>
 							</li>
 							<li>
 								<a class="govuk-link" href="#">Chelmsford City Council</a>
